--- a/include/bab2.tex
+++ b/include/bab2.tex
@@ -121,6 +121,8 @@ Web sendiri terdiri dari tiga komponen utama, yaitu bahasa markup (HTML), style 
 
 \subsection{Alat Bantu Pengembangan di Perancangan Sistem}
 
+Adapun alat bantu untuk pengembangan perancangan sistem aplikasi media pembelajaran ini adalah
+
 \begin{enumerate}[leftmargin=1cm, itemindent=0.6cm,labelwidth=15pt, labelsep=5pt, listparindent=1cm,align=left]
 
     \item \textit{Activity Diagram}
