--- a/include/bab3.tex
+++ b/include/bab3.tex
@@ -40,7 +40,7 @@ Metode pengembangan aplikasi yang akan digunakan dalam penelitian ini adalah met
 \textit{Context diagram} adalah sebuah diagram yang digunakan untuk menggambarkan sistem secara keseluruhan serta hubungannya dengan entitas eksternal yang berinteraksi dengan sistem tersebut. Diagram ini memberikan pandangan menyeluruh mengenai sistem tanpa menyelidiki detail internalnya. Pada context diagram, sistem digambarkan dengan sebuah lingkaran atau persegi panjang di tengah diagram, sementara entitas eksternal digambarkan dengan bentuk yang berbeda di sekitarnya. Hubungan antara sistem dan entitas eksternal ditunjukkan dengan garis yang menghubungkan mereka, menggambarkan aliran data atau informasi.
 
           \begin{figure*}[ht]
-    	      \includegraphics[width=0.6\textwidth, center]{images/diagram-konteks.png}
+    	      \includegraphics[width=0.6\textwidth, center]{images/diagram-konteks2.png}
               \caption{\textit{Context Diagram} Media Pembelajaran pengolahan Citra Menggunakan Visualisasi Interaktif Berbasis Web}
           \end{figure*}
 
@@ -62,7 +62,7 @@ Metode pengembangan aplikasi yang akan digunakan dalam penelitian ini adalah met
 
        
           \begin{figure*}[ht]
-    	      \includegraphics[width=8cm, center]{images/Activity-Diagram.png}
+    	      \includegraphics[width=8cm, center]{images/Activity-Diagram2.png}
               \caption{\textit{Activity Diagram} Media Pembelajaran pengolahan Citra Menggunakan Visualisasi Interaktif Berbasis Web}
           \end{figure*}
 
@@ -90,6 +90,8 @@ Berikut adalah flowchart yang menunjukkan sistem media pembelajaran pengolahan c
           \includegraphics[width=0.5\textwidth, center]{images/flowchart-grayscale.png}
           \caption{\textit{Flowchart Invert}}
       \end{figure*}
+
+    \pagebreak
 
     \item Program Flowchart Operasi \textit{Brightness}
 
@@ -219,7 +221,7 @@ Pengguna dapat memilih salah satu dari tiga gambar \textit{grayscale} untuk dipr
 
     \item Pengujian
 
-    Setelah tahap implementasi, tahap pengujian dilakukan untuk memastikan bahwa aplikasi berfungsi dengan baik dan memenuhi kebutuhan pengguna. Pengujian dilakukan dengan menggunakan berbagai contoh kasus dan skenario untuk memverifikasi kinerja dan keakuratan media pembelajaran. Jika terdapat kesalahan atau kekurangan, perbaikan akan dilakukan pada tahap ini.
+        Setelah tahap implementasi, pengujian aplikasi dilakukan untuk memastikan bahwa aplikasi berfungsi dengan baik dan memenuhi kebutuhan pengguna. Pengujian ini melibatkan 30 responden yang terdiri dari mahasiswa dan masyarakat umum, yang diminta menjawab 5 pertanyaan terkait pengalaman pengguna (\textit{user experience}) dalam menggunakan aplikasi tersebut. Hasil kuisioner akan dianalisis menggunakan metode skala \textit{Likert}.
 
 \item Pemeliharaan
 
